--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cố lơn nhen em iu <3</title>
+        <title>cú lơn nhen em iu <3</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
     </head>
