--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li>cảm thấy không thể tiếp tục thì dừng, hôm sau mình làm nhiều bài hơn hôm trước nhen <3</li>
                     <li>sau mỗi bài tập nghỉ 30 giây và sau mỗi cột nghỉ 1 phút</li>
                     <li>mình tập theo từng cột, nhưng bài tập cuối cùng của mỗi ngày là bài quan trọng nhất, nên thứ tự là cột 1 -> dòng cuối -> cột 2 (trừ bài cuối) -> cột 3 (trừ bài cuối) nhen <3</li>
-                    <li>trong bài cuối cùng, em nỗ lực cho chân chạm đất nhiều nhất có thể, bấm giờ và nhớ đếm xem trong thời gian đó mình chạm đất được bao nhiêu lần và cố gắng vượt qua thành tích của mình những ngày trước nho <3 <3 <3</li>
+                    <li>trong bài cuối cùng, em nỗ lực cho chân chạm đất nhiều nhất có thể, bấm giờ và nhớ đếm xem trong thời gian đó mình chạm đất được bao nhiêu lần và cố gắng vượt qua thành tích của mình những ngày trước nho <3</li>
                     <li>đừng quên giãn cơ sau mỗi buổi tập và tối trước khi ngủ để phục hồi tốt hơn nè :333</li>
                 </ul>
             <h2>Bài tập</h2>
